Refactor hero section with additional buttons

--- a/index.html
+++ b/index.html
@@ -86,17 +86,39 @@
 
   <body>
     <!-- HERO -->
-    <section id="hero">
-      <h1>Scan a crystal.<br />Discover its meaning.</h1>
-      <p class="subtext">
-        AI-powered crystal identification with energetic insight — instant,
-        intuitive, and beautifully simple.
-      </p>
-      <button class="cta" id="scanButton">Scan Now</button>
-      <button class="cta" id="proButton" disabled>
-        Unlock full insights with Pro
-      </button>
-      <p class="subtext">Early access • No spam • Free launch perks</p>
+ <body>
+  <!-- HERO -->
+  <section id="hero">
+    <h1>Scan a crystal.<br />Discover its meaning.</h1>
+    <p class="subtext">
+      AI-powered crystal identification with energetic insight — instant,
+      intuitive, and beautifully simple.
+    </p>
+
+    <!-- SCAN BUTTON -->
+    <button class="cta" id="scanButton" style="margin-bottom:15px;">Scan Now</button>
+
+    <!-- PRO BUTTON -->
+    <button class="cta" id="proButton" disabled style="margin-bottom:15px;">
+      Unlock full insights with Pro
+    </button>
+
+    <p class="subtext">Early access • No spam • Free launch perks</p>
+
+    <!-- EARLY ACCESS BUTTON -->
+    <div style="text-align:center; margin-top:20px;">
+      <a href="https://bit.ly/colorgyapp" target="_blank"
+         style="background-color:#E06C9F;
+                color:#0B0D12;
+                padding:12px 24px;
+                border-radius:8px;
+                text-decoration:none;
+                font-weight:bold;
+                display:inline-block;
+                font-size:1.1em;">
+        🚀 Start Early Access
+      </a>
+</div>
     </section>
 
     <!-- HOW IT WORKS -->
