Make Pro button clickable with link to purchase
Updated the Pro button to be clickable and added a link.

--- a/index.html
+++ b/index.html
@@ -99,9 +99,10 @@
     <button class="cta" id="scanButton" style="margin-bottom:15px;">Scan Now</button>
 
     <!-- PRO BUTTON -->
-    <button class="cta" id="proButton" disabled style="margin-bottom:15px;">
-      Unlock full insights with Pro
-    </button>
+    <button class="cta" id="proButton"
+  onclick="window.open('https://buy.stripe.com/XXXXXX', '_blank')">
+  🔓 Unlock full insights with Pro
+</button>
 
     <p class="subtext">Early access • No spam • Free launch perks</p>
 
