Update Pro button link to new URL

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     <!-- PRO BUTTON -->
     <button class="cta" id="proButton"
-  onclick="window.open('https://buy.stripe.com/XXXXXX', '_blank')">
+  onclick="window.open("https://crystal-gemstone-identifier-app.vercel.app/)">
   🔓 Unlock full insights with Pro
 </button>
 
