Update subtext in index.html for clarity
Replaced early access subtext with new pricing information.

--- a/index.html
+++ b/index.html
@@ -104,8 +104,9 @@
   🔓 Unlock full insights with Pro
 </button>
 
-    <p class="subtext">Early access • No spam • Free launch perks</p>
-
+    <p class="subtext" style="font-size:0.85em; opacity:0.7;">
+  One-time payment • Early access pricing • Future updates included
+</p>
     <!-- EARLY ACCESS BUTTON -->
     <div style="text-align:center; margin-top:20px;">
       <a href="https://bit.ly/colorgyapp" target="_blank"
