Modify Pro button and add lifetime access option
Updated Pro button to open Stripe links for subscription options and added lifetime access button.

--- a/index.html
+++ b/index.html
@@ -100,10 +100,20 @@
 
     <!-- PRO BUTTON -->
     <button class="cta" id="proButton"
-  onclick="window.open("https://crystal-gemstone-identifier-app.vercel.app/)">
+  onclick="window.open('STRIPE_LINK_MONTHLY_YEARLY', '_blank')">
   🔓 Unlock full insights with Pro
 </button>
 
+<p class="subtext" style="font-size:0.9em; opacity:0.75;">
+  7-day free access · Choose Monthly CHF 6.99 or Yearly CHF 39.99 in checkout
+</p><button class="cta secondary"
+  onclick="window.open('STRIPE_LIFETIME_LINK', '_blank')">
+  💎 Lifetime access · Pay once
+</button>
+
+<p class="subtext" style="font-size:0.8em; opacity:0.6;">
+  One-time payment · No subscription
+</p>
     <p class="subtext" style="font-size:0.85em; opacity:0.7;">
   One-time payment • Early access pricing • Future updates included
 </p>
