--- a/index.html
+++ b/index.html
@@ -1,93 +1,37 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Colorgy - AI Crystal Identifier</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- STYLES -->
-    <style>
-      /* Background & Fonts */
-      body {
-        background-color: #0b0d12; 
-        color: #f5f6fa;
-        font-family: "Helvetica", sans-serif;
-        margin: 0;
-        padding: 0;
-        text-align: center;
-      }
+  <title>Colorgy — AI Crystal Identifier</title>
 
-      /* Headings */
-      h1 {
-        color: #f5f6fa;
-        font-size: 2.5em;
-        letter-spacing: 2px;
-        margin-top: 40px;
-      }
+  <meta name="description"
+    content="Scan a crystal. Discover its meaning. AI-powered crystal identification with energetic insight. Free scan. Pro access available." />
 
-      h2 {
-        color: #f5f6fa;
-        font-size: 1.8em;
-        margin: 30px 0 10px;
-      }
+  <!-- Open Graph (WhatsApp, Facebook, iMessage, LinkedIn) -->
+  <meta property="og:title" content="Colorgy — AI Crystal Identifier">
+  <meta property="og:description" content="AI-powered crystal & gemstone scanner with energetic insight.">
+  <meta property="og:image" content="https://DEINE-VERCEL-DOMAIN/apple-logo.png">
+  <meta property="og:type" content="website">
 
-      /* Secondary Text */
-      p,
-      .subtext {
-        color: #9ca3af;
-        font-size: 1em;
-        margin: 10px 0 20px;
-      }
+  <!-- Twitter / X -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Colorgy — AI Crystal Identifier">
+  <meta name="twitter:description" content="Scan crystals. Discover meaning. Unlock Pro insights.">
+  <meta name="twitter:image" content="https://DEINE-VERCEL-DOMAIN/apple-logo.png">
 
-      /* Buttons */
-      button,
-      .cta {
-        background-color: #e06c9f;
-        color: #0b0d12;
-        border: none;
-        padding: 12px 24px;
-        border-radius: 8px;
-        cursor: pointer;
-        font-size: 1em;
-        margin: 10px 0;
-        transition: background-color 0.3s;
-      }
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="/apple-logo.png">
 
-      button:hover,
-      .cta:hover {
-        background-color: #f2a1c4;
-      }
-
-      /* Feedback Input */
-      input[type="text"] {
-        padding: 6px;
-        margin-top: 4px;
-        width: 80%;
-        border-radius: 4px;
-        border: 1px solid #9ca3af;
-        font-size: 1em;
-      }
-
-      /* Sections */
-      section {
-        max-width: 600px;
-        margin: 0 auto 50px auto;
-        padding: 0 20px;
-      }
-
-      /* Footer */
-      footer {
-        color: #9ca3af;
-        font-size: 0.9em;
-        margin-bottom: 20px;
-      }
-    </style>
-  </head>
+  <!-- STYLES -->
+  <style>
+    /* dein CSS bleibt hier exakt wie es ist */
+  </style>
+</head>
 
   <body>
     <!-- HERO -->
- <body>
-  <!-- HERO -->
   <section id="hero">
     <h1>Scan a crystal.<br />Discover its meaning.</h1>
     <p class="subtext">
