Update Open Graph and Twitter meta tags

--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
   <!-- Open Graph (WhatsApp, Facebook, iMessage, LinkedIn) -->
   <meta property="og:title" content="Colorgy — AI Crystal Identifier">
   <meta property="og:description" content="AI-powered crystal & gemstone scanner with energetic insight.">
-  <meta property="og:image" content="https://DEINE-VERCEL-DOMAIN/apple-logo.png">
+  <meta property="og:image" content="https://ai-colorgy-crystal-identifier-app.0.pic.png">
   <meta property="og:type" content="website">
 
   <!-- Twitter / X -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Colorgy — AI Crystal Identifier">
   <meta name="twitter:description" content="Scan crystals. Discover meaning. Unlock Pro insights.">
-  <meta name="twitter:image" content="https://DEINE-VERCEL-DOMAIN/apple-logo.png">
+  <meta name="twitter:image" content="https://ai-colorgy-crystal-identifier-app.0.pic.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="/apple-logo.png">
+  <link rel="icon" type="image/png" href="/ai-colorgy-crystal-identifier-app.0.pic.png">
 
   <!-- STYLES -->
   <style>
@@ -46,7 +46,7 @@
 
 <!-- PRO SUBSCRIPTION (MAIN CTA – EINMAL) -->
 <button class="cta primary" id="proButton"
-  onclick="window.open('https://buy.stripe.com/DEIN_MONTHLY_YEARLY_LINK', '_blank')">
+  onclick="window.open('https://buy.stripe.com/cNi5kDcnw3aR6is3JT8Vi03')">
   Continue with Pro
 </button>
 
